force-app/main/default/objects/AgentGov_Settings__c/AgentGov_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Global and user-level settings for the AgentGov framework. Controls feature flags, default values, and notification preferences.</description>
    <label>AgentGov Settings</label>
</CustomObject>