force-app/main/default/objects/AgentGov_Settings__c/fields/Admin_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Admin_Notification_Email__c</fullName>
    <description>Email address for admin notifications</description>
    <label>Admin Notification Email</label>
    <type>Email</type>
</CustomField>