force-app/main/default/objects/AgentGov_Settings__c/fields/Budget_Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>Budget_Retention_Days__c</fullName>
    <defaultValue>400</defaultValue>
    <description>Days of daily budget history to keep. Budget rows are the source of the console's usage history, so they are kept longer than logs by default.</description>
    <label>Budget Retention Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>