force-app/main/default/objects/AgentGov_Settings__c/fields/Circuit_Breaker_Cooldown_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Circuit_Breaker_Cooldown_Minutes__c</fullName>
    <defaultValue>30</defaultValue>
    <description>Minutes an Open breaker refuses the agent before it admits a single probe request; outcomes reported meanwhile do not restart the wait. A failed probe reopens the breaker for twice this. Both waits are capped at 1440 minutes. A probe that reports no outcome within this time is treated as abandoned and another is admitted.</description>
    <label>Circuit Breaker Cooldown Minutes</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>