force-app/main/default/objects/AgentGov_Settings__c/fields/Circuit_Breaker_Failure_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Circuit_Breaker_Failure_Threshold__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Number of failures before circuit breaker trips</description>
    <label>Circuit Breaker Failure Threshold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>