force-app/main/default/objects/AgentGov_Settings__c/fields/Default_Agent_Priority__c.field-meta.xml
<CustomField>
    <fullName>Default_Agent_Priority__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Default priority for newly registered agents (1=highest)</description>
    <label>Default Agent Priority</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>