force-app/main/default/objects/AgentGov_Settings__c/fields/Enable_Real_Time_Events__c.field-meta.xml
<CustomField>
    <fullName>Enable_Real_Time_Events__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable Platform Event publishing for real-time monitoring</description>
    <label>Enable Real Time Events</label>
    <type>Checkbox</type>
</CustomField>