force-app/main/default/objects/AgentGov_Settings__c/fields/Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Global kill switch for AgentGov governance</description>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>