force-app/main/default/objects/AgentGov_Settings__c/fields/Log_Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>Log_Retention_Days__c</fullName>
    <defaultValue>90</defaultValue>
    <description>Days to keep action logs, conflict logs, and finished sessions; the weekly AgentGov Cleanup job deletes older rows. Budget rows follow Budget Retention Days.</description>
    <label>Log Retention Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>