force-app/main/default/objects/AgentGov_Settings__c/fields/Max_Concurrent_Agents__c.field-meta.xml
<CustomField>
    <fullName>Max_Concurrent_Agents__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Maximum number of agents that can be active simultaneously</description>
    <label>Max Concurrent Agents</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>