force-app/main/default/objects/AgentGov_Settings__c/fields/Notify_Agent_Owners__c.field-meta.xml
<CustomField>
    <fullName>Notify_Agent_Owners__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, alerts are also emailed to each agent's Owner Email, listing only that owner's agents.</description>
    <label>Notify Agent Owners</label>
    <type>Checkbox</type>
</CustomField>