force-app/main/default/objects/AgentGov_Settings__c/fields/Session_Idle_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Session_Idle_Minutes__c</fullName>
    <defaultValue>30</defaultValue>
    <description>Minutes without governed activity after which an agent's session is closed. The agent's next governed call opens a new session. Values outside 1 to 1440 fall back to 30.</description>
    <label>Session Idle Minutes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>